--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<groupId>com.marketlogicsoftware</groupId>
 	<artifactId>survey-demo</artifactId>
 	<version>0.0.1</version>
+	<packaging>jar</packaging>
 	<name>survey-demo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -56,6 +57,12 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
